Fixing filter buttons on ios

--- a/assets/css/list/list.css
+++ b/assets/css/list/list.css
@@ -30,10 +30,12 @@
 	padding: 2px 6px 2px 6px;
 	border-radius: 8px;
 	border-width: .125rem;
+	border-color: var(--accent);
 
 	font-family: var(--text-font);
 	font-size: 1rem;
 	font-weight: 500;
+	color: var(--textcolor);
 
 	cursor: pointer;
 	white-space: nowrap;
@@ -43,9 +45,16 @@
 	-ms-user-select: none;
 	user-select: none;
 
+	/* IOS */
+	-webkit-overflow-scrolling: touch;
+	-webkit-font-smoothing: antialiased;
 	&::-webkit-scrollbar {
 		display: none;
 	}
+	outline: none;
+	-webkit-appearance: none;
+	appearance: none;
+	-webkit-tap-highlight-color: transparent;
 
 	@media (max-width: 768px) {
 		font-size: 0.75rem;
